# Concours-i-nov-ETL

./: README.md  main.py  pyproject.toml  requirements.txt
Data/: concours.jsonl  concours_projet.jsonl  concours_projet_dep_reg.jsonl  concours_projet_realisation.jsonl  concours_projet_thematique.jsonl  concours_toc.jsonl  departements-region.json
Data/ToClean/: concours_inov_1_12_toc.csv  concours_projet.csv  concours_projet_1_12.csv
Extract/PDF_scraping/: classif_format_sommaire.py  clean_projects_details.py  clean_toc.py  download_pdf_files.py  extract_data_inov_11_12.py  extract_data_inov_1_6.py  extract_data_inov_7_10.py  extract_inf_projects.py  extract_sommaire.py  full_extract_pdf_project_details.py  full_extract_pdf_toc.py  words_pdf.py
Extract/PDF_scraping/__marimo__/session/: extract_inf_projects.py.json
Extract/Web_scraping/concoursScrapy/: scrapy.cfg
Extract/Web_scraping/concoursScrapy/concoursScrapy/: settings.py
Extract/Web_scraping/concoursScrapy/concoursScrapy/spiders/: concours_i_nov_spiders.py
Load/ConnexionBDD/: connexion.py
Load/CreateBDD/: bdd_create.sql  create_bdd.py
Load/InsertBDD/: insert_bdd.py
Load/ModelBDD/: model_bdd.drawio
Transform/Projets/: add_dep_region_name.py  add_them_gen.py  add_years_project.py  clean_projects_details.py
Transform/TOC/: clean_toc.py
