[project]
name = "concours-i-nov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "dotenv>=0.9.9",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
